--- a/app/views/static/index.erb
+++ b/app/views/static/index.erb
@@ -1,2 +1,6 @@
-<h1>Hello World</h1>
-<p>See Me in views/static/index.html.erb</p>
+<h1>AIR NIGGA</h1>
+<br/>
+<a href="/users/login %>"><button>User Login</button></a>
+<a href="/users/new %>"><button>New User Sign Up</button></a>
+
+<footer> Created by BrianS </footer>
