room done, add comment ok but cant save

--- a/app/views/rooms/edit.erb
+++ b/app/views/rooms/edit.erb
@@ -1,7 +1,9 @@
 <h1>Edit Room</h1>
 
-<form action="/room/<%= @room.id%>/edit" method="post">
-<input type="hidden" name="_method" value="put">
+<form action="/rooms/<%= @room.id%>" method="post">
+`<input type="hidden" name="_method" value="put">
 Room: <input type="text" name="room[name]" value="<%= @room.name %>">
+
+
 <input type="submit" value="Change">
 </form>	
