--- a/app/views/static/index.erb
+++ b/app/views/static/index.erb
@@ -1,6 +1,11 @@
-<h1>AIR NIGGA</h1>
+<h1>ROOOOM</h1>
 <br/>
-<a href="/users/login %>"><button>User Login</button></a>
-<a href="/users/new %>"><button>New User Sign Up</button></a>
+<% if session[:user_id].nil? %>
+	<a href="/users/login %>"><button>User Login</button></a>
+	<a href="/users/new %>"><button>New User Sign Up</button></a>
+<% else %>
+	Welcome
+<a href="/users/logout %>"><button>Logout</button></a>
+<% end %>
 
 <footer> Created by BrianS </footer>
